fix spacing issue on container

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,6 @@ body {
     width: 100%;
     min-height: 100%;
     margin: 0 auto;
-    margin-top: 110px;
     padding-bottom: 50px;
     background-color: #fff;
 }
@@ -200,6 +199,10 @@ p {
             margin-top: 40px;
             text-align: right;
         }
+    }
+    .container {
+        height: 90%;
+        margin: auto auto;
     }
 }
 
